* rtlanal.c (insn_dependant_p, insn_dependant_p_1): New.         * rtl.h (insn_dependant_p): Declare it.         * loop.c (strength_reduce): Use it.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34010 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-05-18  Richard Henderson  <rth@cygnus.com>
+
+	* rtlanal.c (insn_dependant_p, insn_dependant_p_1): New.
+	* rtl.h (insn_dependant_p): Declare it.
+	* loop.c (strength_reduce): Use it.
+
 2000-05-18  Alexandre Oliva  <aoliva@cygnus.com>
 
 	* config/mn10300/mn10300.c (expand_prologue, expand_epilogue):
