--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-18  Mark Mitchell  <mark@codesourcery.com>
+
+	* Makefile.in (STAGESTUFF): Fix typo in spelling of s-under.
+
 2000-05-18  Richard Henderson  <rth@cygnus.com>
 
 	* rtlanal.c (insn_dependant_p, insn_dependant_p_1): New.
