--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Fri May 19 06:49:35 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* config/elfos.h (SELECT_SECTION): Don't access DECL_INITIAL of
+	a CONSTRUCTOR.
+
 2000-05-18  Chris Demetriou  <cgd@sibyte.com>
 
 	* gcc.texi (MULTILIB_EXCEPTIONS): Correct example and update
