--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,14 @@
+2000-05-19  Bruce Korb  <bkorb@gnu.org>
+
+	* fixinc/README:  cleaned up old documentation
+	* fixinc/check.diff: regenerated & verified on OSR5 on ix86
+	* fixinc/check.tpl: compute the list of needed directories
+	emit "#if defined(name)" because of conflict
+	omit machine name differences from output differences
+	* fixinc/inclhack.def( m88k_multi_incl ):  Use `wrap' function
+	(machine_name): change test text to use `sed' markers
+	* fixinc/fixincl.x: regen
+
 Fri May 19 06:49:35 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* config/elfos.h (SELECT_SECTION): Don't access DECL_INITIAL of
