2000-04-17  Alexandre Petit-Bianco  <apbianco@cygnus.com>
	* parse.y (fold_constant_for_init): Let VAR_DECL and FIELD_DECL be
	processed by the method's switch statement.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34024 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2000-04-17  Alexandre Petit-Bianco  <apbianco@cygnus.com>
+
+	* parse.y (fold_constant_for_init): Let VAR_DECL and FIELD_DECL be
+	processed by the method's switch statement.
+
 2000-05-19  Tom Tromey  <tromey@cygnus.com>
 
 	* java-tree.h: Added init state enum.
