* cpphash.c (funlike_macroexpand): Make sure not to walk p1 	past l1 when deleting whitespace and markers.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34027 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2000-05-19  Zack Weinberg  <zack@wolery.cumb.org>
 
+	* cpphash.c (funlike_macroexpand): Make sure not to walk p1
+	past l1 when deleting whitespace and markers.              
+
 	* cpplex.c (_cpp_scan_until): Clear AUX field of tokens.
 	* cpplib.c (do_unassert): Put the list to compare against on
 	the stack.
