* gcc.c-torture/execute/20000519-2.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34030 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-19  David Edelsohn  <edelsohn@gnu.org>
+
+	* gcc.c-torture/execute/20000519-2.c: New test.
+
 2000-05-19  Andreas Jaeger  <aj@suse.de>
 
 	* gcc.c-torture/execute/20000519-1.c: Testcase from Ulrich Drepper
