* flow.c (make_edges): The sibling call edge to exit is abnormal.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34035 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2000-05-19  Richard Henderson  <rth@cygnus.com>
 
+	* flow.c (make_edges): The sibling call edge to exit is abnormal.
+
+2000-05-19  Richard Henderson  <rth@cygnus.com>
+
 	* jump.c (redirect_jump): Add delete_unused argument.  Don't
 	remove labels and code following when LABEL_NUSES goes to zero.
 	(invert_jump): Likewise.
