--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2000-05-19  Richard Henderson  <rth@cygnus.com>
 
+	* ifcvt.c (find_if_case_2): Don't allow THEN to be EXIT.
+
 	* flow.c (make_edges): The sibling call edge to exit is abnormal.
 
 2000-05-19  Richard Henderson  <rth@cygnus.com>
