* java/io/BufferedWriter.java: Merged with Classpath. 	* java/io/BufferedOutputStream.java: Merged with Classpath.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34041 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-19  Tom Tromey  <tromey@cygnus.com>
+
+	* java/io/BufferedWriter.java: Merged with Classpath.
+	* java/io/BufferedOutputStream.java: Merged with Classpath.
+
 2000-05-16  Andrew Haley  <aph@cygnus.com>
 
 	* sysdep/ia64.c (ia64_backtrace_helper): Pass NULL pointer to
