* Makefile.in (bootstrap): Unset LANG_LIB2FUNCS for stage 1.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34046 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Sat May 20 08:29:28 2000  H.J. Lu  <hjl@gnu.org>
+
+	* Makefile.in (bootstrap): Unset LANG_LIB2FUNCS for stage 1.
+
 Sat May 20 07:27:35 2000  Alexandre Oliva  <aoliva@cygnus.com>
 
 	* fold-const.c (make_range): Handle degenerated intervals.
