--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-20  H.J. Lu  <hjl@gnu.org>
+
+	* Make-lang.in (cplib2.ready): Also depend on cc1plus$(exeext).
+
 2000-05-19  Mark Mitchell  <mark@codesourcery.com>
 
 	Don't create a separate copy of virtual bases for the
