--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+Sat May 20 08:45:41 2000  H.J. Lu  <hjl@gnu.org>
+
+	* Makefile.in (libgcc.mk): Depend on xgcc$(exeext) for
+	GCC_FOR_TARGET used by MULTILIBS.
+	* mklibgcc.in: Make sure each .o file depends on the
+	directory it will be in.
+	Make the multilib directory depends libgcc.
+
 Sat May 20 08:29:28 2000  H.J. Lu  <hjl@gnu.org>
 
 	* Makefile.in (bootstrap): Unset LANG_LIB2FUNCS for stage 1.
