--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+Sat May 20 09:30:55 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* alias.c (aliases_everything_p): Don't special-case QImode here.
+	* c-common.c (c_get_alias_set): Do it here.
+	Handle BIT_FIELD_REF by getting alias info for arg.
+	Use POINTER_TYPE_P.
+
 2000-05-20  Alexandre Oliva  <aoliva@cygnus.com>
 
 	* mklibgcc.in: Restore rule to create ${dir}.
