--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-20  Bruce Korb  <bkorb@gnu.org>
+
+	* fixinc/inclhack.def:  more applications of c_fix=format + tests
+	* fixinc/check.diff:  regenerated
+
 Sat May 20 09:30:55 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* alias.c: Clarify some comments.
