--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-20  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* except.c: Add static prototypes.
+
 2000-05-20  H.J. Lu  <hjl@gnu.org>
 
 	* Make-lang.in (cplib2.ready): Also depend on cc1plus$(exeext).
