* emit-rtl.c (unshare_all_rtl): Store the copied rtx.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34056 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-20  Alexandre Oliva  <aoliva@cygnus.com>
+
+	* emit-rtl.c (unshare_all_rtl): Store the copied rtx.
+
 2000-05-20  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* diagnostic.c: Eliminate implicit int.
