many applications of c_fix=format + tests
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34059 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -28,7 +28,7 @@
 
 2000-05-20  Bruce Korb  <bkorb@gnu.org>
 
-	* fixinc/inclhack.def:  more applications of c_fix=format + tests
+	* fixinc/inclhack.def:  many applications of c_fix=format + tests
 	* fixinc/check.diff:  regenerated
 	* fixinc/fixincl.x:  regenerated
 
