--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-20  Richard Henderson  <rth@cygnus.com>
+
+	* lib/f-torture.exp (TORTURE_OPTIONS): Add "-O3 -g" and "-O3 -fssa".
+
 2000-05-20  Andreas Jaeger  <aj@suse.de>
 
 	* gcc.c-torture/execute/20000519-1.c (main): Fixed return value of
