--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Sun May 21 16:42:31 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* combine.c (try_combine): Handle i3_subst_into_i2 case when I2 is
+	not a PARALLEL.
+
 2000-05-20  Alexandre Oliva  <aoliva@cygnus.com>
 
 	* config/mn10300/mn10300.md (movdi, movdf): 64-bit clean-up.
