--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-21  Tom Tromey  <tromey@cygnus.com>
+
+	* libjava.compile/PR234.java: New file.  For PR gcj/234.
+
 2000-05-22  Bryce McKinlay  <bryce@albatross.co.nz>
 
 	Test for PR gcj/232:
