--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -2,6 +2,7 @@
 
 	* simplify-rtx.c (simplify_ternary_operation): Try to simplify
 	IF_THEN_ELSE to a setcc form.
+	* jump.c (can_reverse_comparison_p): Be prepared for insn null.
 
 2000-05-21  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
