* libjava.compile/PR235.java: New file.  For PR gcj/235.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34086 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-22  Tom Tromey  <tromey@cygnus.com>
+
+	* libjava.compile/PR235.java: New file.  For PR gcj/235.
+
 2000-05-21  Tom Tromey  <tromey@cygnus.com>
 
 	* libjava.compile/PR234.java: New file.  For PR gcj/234.
