* optabs.c (can_extend_p): Allow unsignedp to have any nonzero value. 	(gen_extend_insn, can_fix_p, can_float_p): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34087 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -4,6 +4,9 @@
 
 Mon May 22 13:14:03 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
+	* optabs.c (can_extend_p): Allow unsignedp to have any nonzero value.
+	(gen_extend_insn, can_fix_p, can_float_p): Likewise.
+	
 	* final.c (final_scan_insn, case NOTE_INSN_FUNCTION_BEG): Remove
 	dangling "else" that causes "break" to be conditional.
 	Also remove unneeded code at start.
